--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,9 +1,59 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
+
+{% block title %}Все студенты{% endblock %}
 
 {% block banner %}{% endblock %}
 
-{% block list_courses %}
+{% block menu %}
+    <nav role="navigation">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a id="logo-container" href="{% url 'index' %}" class="brand-logo waves-effect waves-light">
+                    <div class="hide-on-med-and-down">
+                        <img src="{% static 'img/logo_itbursa.png' %}"
+                             width="30" id="appicon">
+                        <span style="font-size: 22px;font-weight:300;">ITBursa</span>
+                    </div>
+                    <div class="hide-on-large-only">
+                        <span style="font-size: 22px;font-weight:300;">ITBursa</span>
+                    </div>
+                </a>
+
+                <ul id="slide-out" class="side-nav">
+                    <li>
+                        <a href="{% url 'index' %}">Главная</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'contact' %}">Контакты</a>
+                    </li>
+                    {% block change_link_mobi %}
+                    <li class="active">
+                        <a href="{% url 'students:list_view' %}">Студенты</a>
+                    </li>
+                    {% endblock %}
+                </ul>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="{% url 'index' %}">Главная</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'contact' %}">Контакты</a>
+                    </li>
+                    {% block change_link %}
+                    <li class="active">
+                        <a href="{% url 'students:list_view' %}">Студенты</a>
+                    </li>
+                    {% endblock %}
+                </ul>
+
+                <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
     <div class="col s12">
         <h5 class="text-primarycolor">Список студентов</h5>
 
