--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,7 +1,7 @@
 <!--quadratic/templates/results.html-->
 <p> Квадратное уравнение a*x*x + b*x + c = 0</p>
 
-<form>
+<form method="get">
   {{ form.as_p }}
   <input type="submit" value="Решить">  
 </form>
