--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,14 @@
 
 
 {% block content %}
-  <div class="jumbotron">
+<div class="jumbotron">
     <div class="container">
 	    <div class="bursa">
         <h1 class="itbursa"><b>IT Bursa<b></h1>
-          <div class="index-logo">
-            <img class="logo-itbursa" src="{% static 'images/logo itbursa.png' %}" alt="...">
-          </div>
-          <p class="descr"><b>Курсы ItBursa начали работу в 2014 году. Мы специализируемся на «модных» языках программирования. Принципиальное наше отличие от других курсов – максимум практики и жесткая система обязательных домашних заданий. Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.
-           </b></p>
+        <div class="index-logo">
+          <img class="logo-itbursa" src="{% static 'images/logo itbursa.png' %}" alt="...">
+        </div>
+  {% include "include/inc_itbursa_include.html" %}
       </div>
     </div>
   </div>
