--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load staticfiles %}
 
 
@@ -15,11 +16,13 @@
 
 <div class="center bold page-header">
   <h1>Преподаватели курса</h1>
+  <h3>PyBursa</h3>
 </div>
 
-{% include "include/inc_inctructor_include.html" with block_title="Учитель курса" instructor=course.coach %}
+{% include "include/inctructor_include.html" with block_title="Учитель курса" instructor=course.coach %}
 
-{% include "include/inc_inctructor_include.html" with block_title="Ассистент курса" instructor=course.assistant %}
+
+{% include "include/inctructor_include.html" with block_title="Ассистент курса" instructor=course.assistant %}
 
 <table  class="jewel" border="1" cellpadding="10">
   <tr>
@@ -33,4 +36,3 @@
 {% endfor %}
 </table>    
 {% endblock content %}
-    
