--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,53 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Teacher {{teacher.last_name}} {{teacher.first_name}}</title>
-	{% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
- 	<script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-	<nav class="navbar navbar-default"> 
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li><a href={% url 'contact'%}>Contacts</a></li>
-      <li><a href={% url 'students:list_view'%}>Students</a></li>
-    </ul>
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}Teacher {{ teacher.last_name }} {{ teacher.first_name }}{% endblock title %}
+
+{% block content %}
   <div class="jumbotron container">
-    <h2>{{teacher.first_name}} {{teacher.last_name}}</h2>
+    <h2>{{ teacher.first_name }} {{ teacher.last_name }}</h2>
     <table class="table">
 			<tbody>
 				<tr>
 					<td>Birth Date</td>
-					<td>{{teacher.date_of_birth}}</td>
+					<td>{{ teacher.date_of_birth|date:"d F, Y" }}</td>
 				</tr>
 				<tr>
 					<td>Address</td>
-					<td>{{teacher.address}}</td>
+					<td>{{ teacher.address }}</td>
 				</tr>
 				<tr>
 					<td>Email</td>
-					<td>{{teacher.email}}</td>
+					<td>{{ teacher.email }}</td>
 				</tr>
 				<tr>
 					<td>Skype</td>
-					<td>{{teacher.skype}}</td>
+					<td>{{ teacher.skype }}</td>
 				</tr>
 				<tr>
 					<td>Phone</td>
-					<td>{{teacher.phone}}</td>
+					<td>{{ teacher.phone }}</td>
 				</tr>
 				<tr>
 					<td>Courses as Coach</td>
 					<td>
 					{% for course in course_coach %}
-						<a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+						<a href={% url 'courses:detail' course.id %}>{{ course.name }}</a>
+            <a href={% url 'students:list_view' %}?course_id={{ course.id }}>
+              <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+            </a>
 					{% endfor %}
 					</td>
 				</tr>
@@ -55,12 +42,14 @@
 					<td>Courses as Assistant</td>
 					<td>
 					{% for course in course_assistant %}
-						<a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+						<a href={% url 'courses:detail' course.id %}>{{ course.name }}</a>
+            <a href={% url 'students:list_view' %}?course_id={{ course.id }}>
+              <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
+            </a>
 					{% endfor %}
 					</td>
 				</tr>			
 			</tbody>
 		</table> 
   </div>   
-</body>
-</html>
+{% endblock content %}
