--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,36 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{course.name}}</title>
-	{% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
-	<script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-  <nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li><a href={% url 'contact'%}>Contacts</a></li>
-      <li><a href={% url 'students:list_view'%}?course_id={{course.id}}>Students</a></li>
-    </ul>
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}{{ course.name }}{% endblock title %}
+
+{% block content %}
   <div class="jumbotron container">
-    <h2>{{course.name}}</h2>
-    <p>{{course.description}}</p>
+    <h2>{{ course.name }}</h2>
+    <p>{{ course.description|truncatechars:32 }}</p>
   </div>
   <div class= "jumbotron container">
     <h2>Teachers</h2> 
-    <h3>Coach</h3>
-    <h4><a href={% url 'coaches:detail' coach.id %}>{{coach.first_name}} {{coach.last_name}}</a></h4>
-    <h6>{{coach.description}}</h6>
-    <h3>Assistant</h3>
-    <h4><a href={% url 'coaches:detail' assistant.id %}>{{assistant.first_name}} {{assistant.last_name}}</a></h4>
-    <h6>{{assistant.description}}</h6>
+    {% include 'include\include.html' with teacher_speciality='Coach' teacher=coach %}
+    {% include 'include\include.html' with teacher_speciality='Assistant' teacher=assistant %}
   </div>
   <div class="jumbotron container">
     <h2>Course lessons</h2>
@@ -45,13 +25,12 @@
 			<tbody>
 			{% for lesson in lessons %}
         <tr>
-					<td>{{lesson.order}}</td>
-					<td>{{lesson.subject}}</td>
-					<td>{{lesson.description}}</td>
+					<td>{{ lesson.order }}</td>
+					<td>{{ lesson.subject }}</td>
+					<td>{{ lesson.description }}</td>
 				</tr>
 			{% endfor %}
 			</tbody>
 		</table>
   </div>
-</body>
-</html>
+{% endblock content %}
