--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -1,58 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{student.name}} {{student.surname}}</title>
-	{% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
-	<script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-	<nav class="navbar navbar-default"> 
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li><a href={% url 'contact'%}>Contacts</a></li>
-      <li><a href={% url 'students:list_view'%}>Students</a></li>
-    </ul>
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}{{ student.name }} {{ student.surname }}{% endblock title %}
+
+{% block content %}
   <div class="jumbotron container">
-    <h2>{{student.name}} {{student.surname}}</h2>
+    <h2>{{ student.name }} {{ student.surname }}</h2>
     <table class="table ">
       <tbody>
 				<tr>
 					<td>Birth Date</td>
-					<td>{{student.date_of_birth}}</td>
+					<td>{{ student.date_of_birth }}</td>
 				</tr>
 				<tr>
 					<td>Address</td>
-					<td>{{student.address}}</td>
+					<td>{{ student.address }}</td>
 				</tr>
 				<tr>
 					<td>Email</td>
-					<td>{{student.email}}</td>
+					<td>{{ student.email }}</td>
 				</tr>
 				<tr>
 					<td>Skype</td>
-					<td>{{student.skype}}</td>
+					<td>{{ student.skype }}</td>
 				</tr>
 				<tr>
 					<td>Phone</td>
-					<td>{{student.phone}}</td>
+					<td>{{ student.phone }}</td>
 				</tr>
 				<tr>
 					<td>Courses</td>
 					<td>
 					{% for course in courses %}
-						<a href={% url 'courses:detail' course.id %}>{{course.name}} </a>
+						<a href={% url 'courses:detail' course.id %}>{{ course.name }} </a>
 					{% endfor %}
 					</td>
 				</tr>
 			</tbody>
 		</table>
   </div>
-</body>
-</html>
+{% endblock content %}
