--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Main</title>
-  {% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
-  <script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-  <nav class="navbar navbar-default"> 
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li><a href={% url 'contact'%}>Contacts</a></li>
-		  <li><a href={% url 'students:list_view'%}>Students</a></li>
-    </ul>
-  </nav>
-  <div class="jumbotron container">
+{% extends 'base.html' %}
+
+{% block title %}Main{% endblock title %}
+
+{% block content %}
+<div class="jumbotron container">
     <h2>Description  of ItBursa courses</h2>
     <p>Some description of ItBursa courses</p>
   </div>
@@ -35,12 +19,11 @@
       <tbody>
       {% for course in courses %}
         <tr>
-          <td><a href={% url 'courses:detail' course.id %}>{{course.name}}</a></td>
-          <td>{{course.short_description}}</td>
+          <td><a href={% url 'courses:detail' course.id %}>{{course.name|upper}}</a></td>
+          <td>{{course.short_description|title}}</td>
         </tr>
       {% endfor %}
       </tbody>
     </table>
   </div>
-</body>
-</html>
+{% endblock content %}
