--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Student</title>
-	{% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
-  <script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-  <nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li> <a href={% url 'contact'%}>Contacts</a></li>
-      <li><a href={% url 'students:list_view' %}>Students</a></li>
-    </ul>
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}Student{% endblock title %}
+
+{% block content %}
   <div class="page-header">
 		<h1>Surname1 Name1</h1>
 	</div>
@@ -122,5 +106,4 @@
       </tbody>
     </table>
   </div>
-</body>
-</html>
+{% endblock content %}
