--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>List</title>
-	{% load staticfiles %}
-  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-  <link href={%static 'css/style.css'%} rel="stylesheet">
-  <script src={%static 'js/jquery.min.js'%}></script>
-  <script src={%static 'js/bootstrap.min.js'%}></script>
-</head>
-<body>
-	<nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
-      <li><a href={% url 'index'%}>Main</a></li>
-      <li><a href={% url 'contact'%}>Contacts</a></li>
-      <li><a href={% url 'students:list_view'%}>Students</a></li>
-    </ul>   
-  </nav>
+{% extends 'base.html' %}
+
+{% block title %}List{% endblock title %}
+
+{% block content %}
   <div class="page-header container media">
     <div class="media-heading"><h1>Students of course PyBursa</h1></div>
       <h3>List of students november 2015</h3>
@@ -36,11 +20,11 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a href={% url 'student_detail'%}>1</a></td>
-					<td><a href={% url 'student_detail'%}>Surname1</a></td>
-					<td><a href={% url 'student_detail'%}>Name1</a></td>
-					<td><a href={% url 'student_detail'%}>Address1</a></td>
-					<td><a href={% url 'student_detail'%}>Skype1</a></td>
+					<td><a href={% url 'student_detail' %}>1</a></td>
+					<td><a href={% url 'student_detail' %}>Surname1</a></td>
+					<td><a href={% url 'student_detail' %}>Name1</a></td>
+					<td><a href={% url 'student_detail' %}>Address1</a></td>
+					<td><a href={% url 'student_detail' %}>Skype1</a></td>
 				</tr>
 				<tr>
 					<td>2</td>
@@ -73,5 +57,4 @@
 			</tbody>
 		</table>
 	</div>
-</body>
-</html>
+{% endblock content %}
