lesson 7.2 is done

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="wrapper_quadratic">
-    <h2 class="Quadratic_res"> Quadratic result a*x*x + b*x + c = 0 </h2>
+    <h2 class="Quadratic_res"> Квадратное уравнение a*x*x + b*x + c = 0 </h2>
 
     <form method="get">
         {{ form.as_ul }}
