--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Teacher {{ teacher.last_name }} {{ teacher.first_name }}{% endblock title %}
+{% block title %}Teacher {{ teacher.last_name }} {{ teacher.first_name }}{% endblock %}
 
 {% block content %}
   <div class="jumbotron container">
@@ -52,4 +52,4 @@
 			</tbody>
 		</table> 
   </div>   
-{% endblock content %}
+{% endblock %}
