--- a/students/templates/students/list_view.html
+++ b/students/templates/students/list_view.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Students {{ course.name }}{% endblock title %}
+{% block title %}Students {{ course.name }}{% endblock %}
 
 {% block content %}
   <div class="jumbotron container">
@@ -32,4 +32,4 @@
       </tbody>
 		</table>
   </div>
-{% endblock content %}
+{% endblock %}
