--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Contacts{% endblock title %}
+{% block title %}Contacts{% endblock %}
 
 {% block content %}
   <div class="container" align="center"> 
@@ -45,4 +45,4 @@
         Phone:  +77004442424<br>
     </div>
   </div>
-{% endblock content %}
+{% endblock %}
