--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Main{% endblock title %}
+{% block title %}Main{% endblock %}
 
 {% block content %}
 <div class="jumbotron container">
@@ -19,11 +19,11 @@
       <tbody>
       {% for course in courses %}
         <tr>
-          <td><a href={% url 'courses:detail' course.id %}>{{course.name|upper}}</a></td>
-          <td>{{course.short_description|title}}</td>
+          <td><a href={% url 'courses:detail' course.id %}>{{ course.name|upper }}</a></td>
+          <td>{{ course.short_description|title }}</td>
         </tr>
       {% endfor %}
       </tbody>
     </table>
   </div>
-{% endblock content %}
+{% endblock %}
