--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Student{% endblock title %}
+{% block title %}Student{% endblock %}
 
 {% block content %}
   <div class="page-header">
@@ -106,4 +106,4 @@
       </tbody>
     </table>
   </div>
-{% endblock content %}
+{% endblock %}
