--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}List{% endblock title %}
+{% block title %}List{% endblock %}
 
 {% block content %}
   <div class="page-header container media">
@@ -57,4 +57,4 @@
 			</tbody>
 		</table>
 	</div>
-{% endblock content %}
+{% endblock %}
