--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ course.name }}{% endblock title %}
+{% block title %}{{ course.name }}{% endblock %}
 
 {% block content %}
   <div class="jumbotron container">
@@ -33,4 +33,4 @@
 			</tbody>
 		</table>
   </div>
-{% endblock content %}
+{% endblock %}
