--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ student.name }} {{ student.surname }}{% endblock title %}
+{% block title %}{{ student.name }} {{ student.surname }}{% endblock %}
 
 {% block content %}
   <div class="jumbotron container">
@@ -38,4 +38,4 @@
 			</tbody>
 		</table>
   </div>
-{% endblock content %}
+{% endblock %}
