--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}{% endblock title %}</title>
+  <title>{% block title %}{% endblock %}</title>
   {% load staticfiles %}
   <link href={% static 'css/bootstrap.css' %} rel="stylesheet">
   <link href={% static 'css/style.css' %} rel="stylesheet">
@@ -19,6 +19,6 @@
 		  <li><a href={% url 'students:list_view' %}>Students</a></li>
     </ul>
   </nav>
-{% block content %}{% endblock content %}
+{% block content %}{% endblock %}
 </body>
 </html>
