lesson 7.2 is done

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,8 +1,11 @@
-{% extends "base.html" %}
-
-{% block title %}quadratic{% endblock title %}
-
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>quadratic</title>
+<body>
 <div class="wrapper_quadratic">
     <h2 class="Quadratic_res"> Квадратное уравнение a*x*x + b*x + c = 0 </h2>
 
@@ -23,4 +26,5 @@
     {% endif %}
     </ul>
 </div>
-{% endblock content %}
+</body>
+</html>
