--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="" name="description">
-    <meta content="Orest Stetsiak" name="author">
-    <title>PyBursa main page</title>
-    <link href="{% static 'images/favicon.png' %}" rel="icon">
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button aria-controls="navbar" aria-expanded="false" class=
-            "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-            "collapse" type="button"><span class="sr-only">Toggle
-          navigation</span> <span class="icon-bar"></span> <span class=
-            "icon-bar"></span> <span class="icon-bar"></span></button>
-          <a href="{% url 'index' %}">Main</a>
-          <a href="{% url 'contact' %}">Contacts</a>
-          <a href="{% url 'students:list_view' %}">Students</a>
-          <a href="{% url 'quadratic_start' %}">QE</a>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input class="form-control" placeholder="Email" type=
-                "text">
-            </div>
-            <div class="form-group">
-              <input class="form-control" placeholder="Password"
-                type="password">
-            </div>
-            <button class="btn btn-success" type="submit">Sign
-            in</button>
-          </form>
-        </div>
-      </div>
-    </nav>
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
+
+
+{% block title %}Main Page{% endblock title %}
+
+
+{% block nav_class_index %}active{% endblock nav_class_index %}
+
+
+{% block content %}
+
+
     <div class="jumbotron">
       <div class="container">
         <h2>PyBursa</h2>
@@ -422,8 +392,6 @@
         <p>designed by Orest Stetsiak</p>
       </footer>
     </div>
-    <script src=
-      "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-    <script src="{% static "js/bootstrap.js" %}"></script>
-  </body>
-</html>
+
+{% endblock content %}
+
