--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
 
 
-{% load staticfiles %}
-
-  
-{% block title %}Main{% endblock title %}
+{% block title %}Main Page{% endblock title %}
 
 
-{% block navigation_main %}active{% endblock navigation_main %}
+{% block nav_class_index %}active{% endblock nav_class_index %}
 
 
 {% block content %}
