--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
     <title>{% block title %}{% endblock title %}</title>
-    {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	  <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
@@ -21,9 +21,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="{% block navigation_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
-                <li class="{% block navigation_main_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="{% block navigation_main_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
+                <li class="{% block nav_class_index %}{% endblock nav_class_index %}"><a href="{% url 'index' %}">Main</a></li>
+                    <li class="{% block nav_class_contacts %}{% endblock nav_class_contacts %}"><a href="{% url 'contact' %}">Contacts</a></li>
+                    <li class="{% block nav_class_students %}{% endblock nav_class_students %}"><a href="{% url 'students:list_view' %}{% block students_url_id %}{% endblock students_url_id %}">Students</a></li>
               </ul>
             </div>
           </div>
