--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
 
 
-{% block title %}Coach detail{% endblock title %}
+{% block title %}Courses Page{% endblock %} 
 
 
-{% block detail %}<li class="active"><a href="#">detail</a></li>{% endblock detail %}
-
-
-{% block navigation_main_students %}active{% endblock navigation_main_students %}
+{% block nav_class_index %}active{% endblock nav_class_index %} 
 
 
 {% block content %}
