--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
 
 
-{% load static from staticfiles %}
+{% block title %}Students List{% endblock title %} 
 
 
-{% block title %}Students List{% endblock title %}
-
-
-{% block navigation_main_students %}active{% endblock navigation_main_students %}
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 
 {% block content %}
