--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,8 @@
           {% if list_of_courses %}
           {% for i in list_of_courses %}
           <tr>
-            <td> <a href="courses/{{ i.id }}"> {{ i.name }} </a> </td>
-            <td>{{ i.short_description }}</td>
+            <td> <a href="courses/{{ i.id }}"> {{ i.name|upper }} </a> </td>
+            <td>{{ i.short_description|title }}</td>
           </tr>
           {% endfor %}
           {% endif %}
