--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,33 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="" name="description">
-    <meta content="Orest Stetsiak" name="author">
-    <title>Student details</title>
-    <link href="{% static 'images/favicon.png' %}" rel="icon">
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button aria-controls="navbar" aria-expanded="false" class=
-            "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-            "collapse" type="button"><span class="sr-only">Toggle
-          navigation</span> <span class="icon-bar"></span> <span class=
-            "icon-bar"></span> <span class="icon-bar"></span></button>
-          <a href="{% url 'index' %}">Main</a>
-          <a href="{% url 'contact' %}">Contacts</a>
-          <a href="{% url 'students:list_view'%}?course_id={{ science.id }}">Students</a>
-          <a href="{% url 'quadratic_start' %}">QE</a>
-        </div>
-      </div>
-    </nav>
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
+
+
+{% block title %}Coaches detail{% endblock title %}
+
+
+{% block nav_class_index %}active{% endblock nav_class_index %}
+
+
+{% block content %}
+
+
     <div class="jumbotron">
       <div class="container" role="main">
         <div class="jumbotron">
@@ -39,14 +23,13 @@
           </tr>
           <th>first_name</th>
           <td> {{ coacher.get_first_name }} </td>
-          </tr>
           <tr>
             <th>last_name</th>
             <td> {{ coacher.get_last_name }}</td>
           </tr>
           <tr>
             <th>bday</th>
-            <td> {{ coacher.date_of_birth }} </td>
+            <td> {{ coacher.date_of_birth|date:'j F, Y' }} </td>
           </tr>
           <tr>
             <th>email</th>
@@ -86,8 +69,6 @@
         </table>
       </div>
     </div>
-    <script src=
-      "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-    <script src="../static/js/bootstrap.js"></script>
-  </body>
-</html>
+
+
+{% endblock content %}
