--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,34 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="" name="description">
-    <meta content="Orest Stetsiak" name="author">
-    <title>Students</title>
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'images/favicon.png' %}" rel="icon">
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button aria-controls="navbar" aria-expanded="false" class=
-            "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-            "collapse" type="button"><span class="sr-only">Toggle
-          navigation</span> <span class="icon-bar"></span> <span class=
-            "icon-bar"></span> <span class="icon-bar"></span></button>
-          <a href="{% url 'index' %}">Main</a>
-          <a href="{% url 'contact' %}">Contacts</a>
-          <a href="{% url 'students:list_view' %}">Students</a>
-          <a href="{% url 'quadratic_start' %}">QE</a>
-        </div>
-      </div>
-    </nav>
+{% extends 'base.html' %} 
+
+{% load staticfiles %} 
+
+
+{% block title %}Student list{% endblock title %}
+
+
+{% block nav_class_index %}active{% endblock nav_class_index %}
+
+
+{% block content %}
+
+
     <div class="jumbotron">
       <div class="container" role="main">
         <div class="table-responsive">
@@ -51,18 +34,19 @@
               <td> {{ student.address }} </td>
               <td> {{ student.skype }} </td>
               <td>
-                {% for course in student.courses.all %}
-                <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                {% endfor %}
+
+
+        {% include 'include/cource_detail_include.html' with block_title='TEEEEEST' cource=i %}
+
+
+
               </td>
             </tr>
             {% endfor %}
           </table>
         </div>
       </div>
-      <script src=
-        "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-      <script src="{% static "js/bootstrap.js" %}"></script> 
     </div>
-  </body>
-</html>
+
+
+{% endblock content %}
