--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
 						<li class={% block active_main %}{% endblock %}><a href="{% url 'index' %}">Главная</a></li>
 						<li class={% block active_contact %}{% endblock %}><a href="{% url 'contact' %}">Контакты</a></li>
 						<li class={% block active_students %}{% endblock %}><a href="{% url 'students:list_view' %}">Студенты</a></li>
+						<li class={% block active_quadratic %}{% endblock %}><a href="{% url 'results' %}">Решить</a></li>
 					</ul>	
 			</div>
 		</div>
