--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -36,7 +36,7 @@
               <td>
 
 
-        {% include 'include/cource_detail_include.html' with block_title='TEEEEEST' cource=i %}
+              {% include 'include/cource_detail_include.html' cource=i %}
 
 
 
