--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -15,24 +15,12 @@
       <div class="container">
         <div class="jumbotron transparant-background">
           <h2 class="text-align-center">Квадратное уравнение a*x*x + b*x + c = 0</h2>
-          <ul>
-
-            <form method="post">
-              {% csrf_token %}
+            <form method="get">
               {{ form.as_p }}
               <input type="submit">
             </form>
-
-            <li>a = {{a}}<br>
-            {{a_error}}</li>
-            <li>b = {{b}}<br>
-            {{b_error}}</li>
-            <li>c = {{c}}<br>
-            {{c_error}}</li>
-          </ul>
-          {{d}}<br>
-          {{d_error}}<br>
-          {{solution}}
+          {{ d }}<br>
+          {{ solution }}
         </div>
       </div>
     </div>
