KZ 7.1 and KZ7.2 5th try

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
 {% block title %}Main Page{% endblock title %}
 
 
-{% block nav_class_contacts %}active{% endblock nav_class_contacts %}
+{% block nav_contacts %}active{% endblock nav_contacts %}
 
 
 {% block content %}
