--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="{% block nav_class_index %}{% endblock nav_class_index %}"><a href="{% url 'index' %}">Main</a></li>
-                    <li class="{% block nav_class_contacts %}{% endblock nav_class_contacts %}"><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li class="{% block nav_class_students %}{% endblock nav_class_students %}"><a href="{% url 'students:list_view' %}{% block students_url_id %}{% endblock students_url_id %}">Students</a></li>
+                <li class="{% block nav_main %}{% endblock nav_main %}"><a href="{% url 'index' %}">Main</a><li>
+                <li class="{% block nav_contacts %}{% endblock nav_contacts %}"><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="{% block nav_students %}{% endblock nav_students %}"><a href="{% url 'students:list_view' %}">Students</a><li>
               </ul>
             </div>
           </div>
