--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% block title %}Main Page{% endblock title %}
 
 
-{% block nav_class_index %}active{% endblock nav_class_index %}
+{% block nav_main %}active{% endblock nav_main %}
 
 
 {% block content %}
