--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -6,7 +6,7 @@
 {% block title %}Students List{% endblock title %} 
 
 
-{% block nav_class_students %}active{% endblock nav_class_students %}
+{% block nav_students %}active{% endblock nav_students %}
 
 
 {% block content %}
