--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -14,35 +14,33 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-		      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		    <![endif]-->
+              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-
-                
                 <h4>Квадратное уравнение a*x*x + b*x + c = 0</h4>
                 <form method="get">
                     {{ form.as_p }}
-                    
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                 <h4>Дискриминант: {{ disrcim }}</h4> 
-                {% if disrcim %}
-                    {# discrim != '' #}
-                    <h4>Дискриминант: {{ disrcim }}</h4> 
-                    {% if disrcim > 0 %}
+
+                {% if discrim %} 
+
+                    <h4>Дискриминант: {{ discrim }}</h4> 
+                    {% if discrim > 0 %}
                         <h5>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h5> 
-                    {% elif disrcim == 0 %}
+                    {% elif discrim == 0 %}
                         <h5>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h5> 
-                    {% elif disrcim < 0 %} 
+                    {% elif discrim < 0 %} 
                         <h5>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h5>
                     {% endif %} 
-                {% endif %}
+                {% endif %} 
+
             </div>
         </div>
     </div>
