--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 <tr>
  <th>Курс</th><th>Описание</th>
 {% for i in name_course %}
-<tr><td><a href="{% url 'courses:detail' i.id %}">{{ i|upper }}</a></td><td>{{ i.description|title }}</td></tr>
+<tr><td><a href="{% url 'courses:detail' i.id %}">{{ i|upper }}</a></td><td>{{ i.short_description|title }}</td></tr>
 {% endfor %}
 </tr>
 </table>
