first try KZ7_1

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,2 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyBursa</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-         <li><a href="{% url 'index' %}">Главная</a></li>
-         
-         <li><a href="{% url 'contact' %}">Контакты</a></li>
-         <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-         
-         </li>
-        </ul>
-   
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  <div class="jumbotron">
-    <div class="container">
-      <div class="page-header">
-        <h1>ooniversity</h1>
-        <h3>Мы специализируемся на современных языках программирования, которые помогут Вам бытьв тренде разработки сегодня и завтра.<h3>
-     </div>
-    </div>
-  </div> 
-  <h2>Выбирай, на каком курсе хочешь учиться!</h2>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Курс</th>
-        <th>Описание</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for course in courses %}
-        <tr>
-          <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-          <td>{{ course.short_description }}</td>
-        
-        </tr>
-      {% endfor %}
-     </tbody>
-  </table>
-  <div class="alert alert-success" role="alert">P.S. не пожалеешь!</div>
-   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% extends "base.html" %}
+{% block blow_main %}active{% endblock blow_main %}
