--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,37 +1,8 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyBursa contacts</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-      
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Главная</a></li>
-          <li><a href="{% url 'contact' %}">Контакты</a></li>
-          <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-          </li>
-        </ul>
-   
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+{% extends "base.html" %}
+{% block title %}PyBursa contacts{% endblock title %}
+{% block blow_contact %}active{% endblock blow_contact %}
+{% block content %}
+{% load staticfiles %}
   <div class="jumbotron">
     <div class="container">
       
@@ -75,8 +46,5 @@
   </div>
   </div>
   <div class="alert alert-warning" role="alert">Поторопись!</div><!-- /.row -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
+ 
