--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,35 +1,8 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyBursa</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Главная</a></li>
-         
-            <li><a href="{% url 'contact' %}">Контакты</a></li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Студенты</a></li>
-         
-            </li>
-          </ul>
-   
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+{% extends "base.html" %}
+{% block title %}PyBursa{% endblock title %}
+{% block spec_link %}<a href="{% url 'students:list_view' %}?course_id={{ course.id }}">{% endblock spec_link %}
+{% block content %}
+           
     <div class="jumbotron">
       <div class="container">
         <div class="page-header">
@@ -40,7 +13,7 @@
       </div> 
     </div> 
     <h1>{{ course }}</h1>
-    <h3>{{ course.description }}<h3> 
+    <h3>{{ course.description|truncatechars:32 }}<h3> 
     <h2>План курса</h2>
     <table class="table table-hover">
       <thead>
@@ -97,7 +70,5 @@
         
        </tbody>
     </table>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}    
+    
