--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,39 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyStudent</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   
-    <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  </head>
-  <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Главная</a></li>
-          <li><a href="{% url 'contact' %}">Контакты</a></li>
-          <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  
-  
-  
-  <div>
-    
-  </div>
-  
+{% extends "base.html" %}
+{% block title %}PyStudent{% endblock title %}
+{% block content %}
   <table class="table table-condensed">
     <thead><h3>{{ student.name }} {{ student.surname }}</h3>
       <tr>
@@ -74,9 +41,5 @@
 
     </tbody>
   </table>
-  
-  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}  
+
