--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+
 {% load staticfiles %}
+
+{% load staticfiles %}
+
 {% block title %}PyBursa contacts{% endblock title %}
+
 {% block blow_contact %}active{% endblock blow_contact %}
+
 {% block content %}
 
   <div class="jumbotron">
