--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+
+{% load staticfiles %}
+
 {% block title %}PyStudent{% endblock title %}
+
 {% block content %}
+
   <table class="table table-condensed">
     <thead><h3>{{ student.name }} {{ student.surname }}</h3>
       <tr>
