--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+
+{% load staticfiles %}
+
 {% block title %}PyStudents{% endblock title %}
+
 {% block blow_students %}active{% endblock blow_students %}
+
 {% block content %}
+
   <div class="jumbotron">
     <div class="container">
       <h1>Список студентов</h1>
