--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+
+{% load staticfiles %}
+
 {% block title %}PyCoach{% endblock title %}
+
 {% block content %}
+
   <table class="table table-condensed">
     <thead><h3>{{ coach.user.first_name }} {{ coach.user.last_name }}</h3>
       <tr>
@@ -33,7 +38,7 @@
         <td>курсы учитель </td>
         <td>
             {% for course_c in course_coach %}
-            <p><a href="{% url 'courses:detail' course_c.id %}"> {{ course_c.name }}</a> студенты курса<a href="{% url 'students:list_view' %}?course_id={{ course_c.id }}"> <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></a></span></p>
+            <p><a href="{% url 'courses:detail' course_c.id %}"> {{ course_c.name }}</a> студенты курса<a href="{% url 'students:list' %}?course_id={{ course_c.id }}"> <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></a></span></p>
             {% endfor %}
             
       </td>
@@ -42,7 +47,7 @@
         <td>курсы ассистент</td>
         <td>
             {% for course_a in course_assistant %}
-            <p><a href="{% url 'courses:detail' course_a.id %}"> {{ course_a.name }}</a> студенты курса<a href="{% url 'students:list_view' %}?course_id={{ course_a.id }}"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></a></span></p>
+            <p><a href="{% url 'courses:detail' course_a.id %}"> {{ course_a.name }}</a> студенты курса<a href="{% url 'students:list' %}?course_id={{ course_a.id }}"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></a></span></p>
             {% endfor %}
         </td>
       </tr>
