--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+
+{% load staticfiles %}
+
 {% block blow_main %}active{% endblock blow_main %}
+
 {% block content %}
+
   <div class="jumbotron">
     <div class="container">
       <div class="page-header">
