KZ 7.1 11th try

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -13,10 +13,11 @@
 
 
 {% block content %}
+</br></br></br>
 <div class="container">
    <div class="container">
           <h2>{{ course.name|upper }} course details</h2>
-            <p>{{ courses.description|truncatechars:32 }}</p>
+            <p>{{ course.description|truncatechars:32 }}</p>
               <br>
                 <h3>Coach</h3>
                  <table class="table">
